# funlab-sse

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: sse-plugin-consumer-guide.en.md  sse-plugin-consumer-guide.zh-TW.md  sse-plugin-development-guide.en.md  sse-plugin-development-guide.zh-TW.md
funlab/sse/: __init__.py  archi_flow.md  archi_sequence.md  enhanced_sse.py  enhansed_sse_flowchart.md  event_manager.py  handler.py  manager.py  model.py  models.py  service.py  view.py
funlab/sse/conf/: plugin.toml
funlab/sse/static/js/: sse_client.js  sse_notifications.js
tests/: conftest.py
tests/unit/: test_sse_disconnect.py
