[tool.poetry]
name = "funlab-sse"
version = "0.1.0"
description = "Sever-side Event plugin for funlab flask web application"
authors = ["sunny <013.lin@gmail.com>"]
readme = "README.md"
packages = [{include = "funlab"}]

[tool.poetry.dependencies]
python = "^3.11"
funlab-libs = {path = "../funlab-libs", develop = true}
Flask = ">=3.0"
flask-login = ">=0.6"
SQLAlchemy = ">=2.0"
tzlocal = ">=4.0"
pydantic = ">=2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.plugins."funlab_plugin"]
SSEService = "funlab.sse.service:SSEService"